--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-react-svg": "^1.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-syntax-highlighter": "^15.4.4",
     "react-transition-group": "^4.4.2",
     "sass": "^1.35.1",
     "slugify": "^1.5.3",
