--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.21.3",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "js-base64": "^3.6.1",
     "next": "11.0.1",
     "next-react-svg": "^1.1.3",
     "react": "17.0.2",
