--- a/package.json
+++ b/package.json
@@ -9,17 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@carbon/charts": "0.43.0",
-    "@carbon/charts-react": "^0.39.1",
     "@supabase/supabase-js": "^1.21.3",
     "axios": "^0.21.1",
-    "carbon-components": "^10.41.0",
-    "d3": "5.0.0",
+    "chart.js": "^3.5.1",
     "date-fns": "^2.23.0",
     "js-base64": "^3.6.1",
     "next": "11.0.1",
     "next-react-svg": "^1.1.3",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-syntax-highlighter": "^15.4.4",
