--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-base64": "^3.6.1",
     "next": "11.0.1",
     "next-react-svg": "^1.1.3",
+    "plaiceholder": "^2.0.1",
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.2",
