--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-inlinesvg": "^2.3.0",
     "react-masonry-css": "^1.0.16",
     "react-syntax-highlighter": "^15.4.4",
     "react-transition-group": "^4.4.2",
