--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
     "date-fns": "^2.23.0",
+    "gray-matter": "^4.0.3",
     "js-base64": "^3.6.1",
     "next": "11.0.1",
+    "next-mdx-remote": "^3.0.8",
     "next-react-svg": "^1.1.3",
     "node-html-parser": "^5.1.0",
     "plaiceholder": "^2.0.1",
@@ -24,7 +26,7 @@
     "react-icons": "^4.2.0",
     "react-inlinesvg": "^2.3.0",
     "react-masonry-css": "^1.0.16",
-    "react-syntax-highlighter": "^15.4.4",
+    "react-syntax-highlighter": "^15.4.5",
     "react-transition-group": "^4.4.2",
     "sass": "^1.35.1",
     "slugify": "^1.5.3",
