--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.21.3",
     "axios": "^0.21.1",
-    "chart.js": "^3.5.1",
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
     "js-base64": "^3.6.1",
@@ -19,9 +18,7 @@
     "next-mdx-remote": "^3.0.8",
     "next-react-svg": "^1.1.3",
     "node-html-parser": "^5.1.0",
-    "plaiceholder": "^2.0.1",
     "react": "17.0.2",
-    "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-inlinesvg": "^2.3.0",
@@ -30,8 +27,7 @@
     "react-transition-group": "^4.4.2",
     "sass": "^1.35.1",
     "slugify": "^1.5.3",
-    "swr": "^0.5.6",
-    "use-dark-mode": "^2.3.1"
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "eslint": "7.30.0",
