--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "kubs.uk",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^1.21.3",
-    "axios": "^0.21.1",
-    "date-fns": "^2.23.0",
-    "gray-matter": "^4.0.3",
-    "js-base64": "^3.6.1",
-    "next": "11.0.1",
-    "next-mdx-remote": "^3.0.8",
-    "next-react-svg": "^1.1.3",
-    "node-html-parser": "^5.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
-    "react-inlinesvg": "^2.3.0",
-    "react-masonry-css": "^1.0.16",
-    "react-syntax-highlighter": "^15.4.5",
-    "react-transition-group": "^4.4.2",
-    "sass": "^1.35.1",
-    "slugify": "^1.5.3",
-    "swr": "^0.5.6"
-  },
-  "devDependencies": {
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1"
-  }
+    "name": "kubs.uk",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@svgr/webpack": "^8.0.1",
+        "axios": "^0.21.1",
+        "date-fns": "^2.23.0",
+        "js-base64": "^3.6.1",
+        "next": "^13.4.9",
+        "next-mdx-remote": "^4.4.1",
+        "next-react-svg": "^1.2.0",
+        "node-html-parser": "^5.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.2.0",
+        "react-inlinesvg": "^3.0.2",
+        "react-masonry-css": "^1.0.16",
+        "react-syntax-highlighter": "^15.4.5",
+        "react-transition-group": "^4.4.2",
+        "sass": "^1.35.1",
+        "slugify": "^1.5.3",
+        "strapi-sdk-js": "^2.2.0",
+        "swr": "^2.2.0"
+    },
+    "devDependencies": {
+        "eslint": "7.30.0",
+        "eslint-config-next": "^13.4.9"
+    }
 }
